--- a/css/estilos blog.css
+++ b/css/estilos blog.css
@@ -8,12 +8,20 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background-color: aquamarine;
+    font-size: 20px;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 2);
+}
+
 #container
 {
     width: 70%;
     padding: 1em;
     text-align: center;
     border: 1px solid#DDD;
+    background-color: skyblue;
 
 }
 
